# pantry-bot

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
src/pantry_bot/: auth.py  config.py  db.py  handlers.py  llm.py  main.py
